deploy/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-k8s-service
spec:
  selector:
    app: laravel-app-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app-k8s-deployment
  labels:
    app: laravel-app-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app-k8s
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: laravel-app-k8s
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginx-mount
          emptyDir: {}
      containers:
      - name: laravel-app-k8s
        image: <IMAGE>
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
        #     readOnly: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
        #   - name: nginx-mount
        #     mountPath: /etc/nginx/sites-available/
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-laravel-app-k8s
  # namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-test1-davidpeach-me
spec:

  tls:
  - hosts:
    - test1.davidpeach.me
    secretName: laravel-app-k8s--tls

  ingressClassName: nginx

  rules:
    - host: test1.davidpeach.me
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: laravel-app-k8s-service
              port:
                number: 80
